Fri Sep  28 08:51:10 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Created a ewl_config application under tools/ewl_config, which you
	  can setup ewl in a easy way with.
	* Added a ewl_radiobutton_set_checked, and a ewl_radiobutton_is_checked.
	* Added a ewl_checkbutton_set_checked, and a ewl_checkbutton_is_checked.

Fri Sep  28 05:14:06 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Forgot to add a destroy callback to free Ewl_Notebook->pages.

Fri Sep  28 04:42:45 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a Ewl_Notebook widget.
	* Created a Ewl_Notebook test section in the test program.

Thu Sep  27 18:25:12 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Converted the Ewl_Spinner to match the new code.
	* I set the default Ewl_Entry font size to 10.
	* Added a Ewl_Spinner test section to the test application.

Thu Sep  20 13:57:55 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Added a Ewl_Separator.

Sat Sep  15 04:42:27 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Fixed bug in Ewl_Entry, when calling ewl_text_set_text the cursor
	  appeared even if the entry wasn't selected.
	* Added a Ewl_Selection widget for selections in the Ewl_Entry and
	  the future Ewl_TextArea.

Sat Sep  15 18:59:40 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Renamed the callback EWL_CALLBACK_UNSELECT to EWL_CALLBACK_DESELECT.
	* Made the cursor in the Ewl_Entry widget only appear when the entry
	  is selected.

Thu Sep  13 01:26:30 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Some minor fixed in the Ewl_Entry code.
	* Extended the Ewl_Entry section in the test program.
	* Removed MIN_W, MIN_H, MAX_W, and MAX_H from ewl_object.h, now we use
	  MINIMUM_W, MINIMUM_H, MAXIMUM_W, and MAXIMUM_H only instead.

Wed Sep  11 17:35:33 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
	* Rewrote the Ewl_Entry widget to match the new code.